<resources>
    <string name="app_name">Protoflow</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Protoflow</string>
    <string name="nav_header_subtitle">Focus, work hard.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_drawer_7_days">7 Days</string>
    <string name="quick_list">Quick List</string>
    <string name="nav_drawer_today">Today</string>
    <string name="nav_drawer_calendar">Calendar</string>
    <string name="nav_drawer_routines">Routines</string>
    <string name="nav_drawer_projects">Projects</string>
    <string name="nav_add_project">Add</string>

    <string name="number_picker_duration">Duration</string>
    <string name="action_settings">Settings</string>

    <string name="project_picker_title">Projects</string>

    <string name="add_task_repeat_switch">Repeat</string>
    <string name="add_task_unscheduled">Unscheduled</string>
    <string name="add_task_duration">Duration</string>
    <string name="add_task_start_time">Start Time</string>
    <string name="add_task_notes">Notes</string>
    <string name="add_task_task_name">task name</string>
    <string name="add_task_not_in_project">Not in project</string>

    <string name="tasks_toolbar_title_today">Today</string>
    <string name="tasks_toolbar_title_7_days">Next 7 Days</string>
    <string name="tasks_toolbar_title_routines">Routines</string>


    <string name="new_project_title">New Project</string>
    <string name="new_project_hint">Project name</string>
    <string name="new_project_no_title_warning">"Every project deserves a name!"</string>
    <string name="new_project_no_title_toast">"Project name is blank"</string>

    <string name="new_routine_title">New Routine</string>
    <string name="new_routine_hint">Routine Name</string>
    <string name="new_routine_no_title_warning">"Routines need names too!"</string>
    <string name="new_routine_no_title_toast">"Routine name is blank"</string>

    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_text">1 Task Deleted</string>
    <string name="timer_finished">finished</string>
    <string name="recycler_view_empty_state">Look\'s like you\'ve got nothing to do… \n \nTry adding a new task with the \' + \' button</string>
    <string name="recycler_view_empty_state_routine">Got a morning or maybe a workout routine?\n\nMake a routine with the \' + \' button \n\nThen add it to a day or project</string>


</resources>
