<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_calendar_group">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar_black_24"
            android:title="@string/nav_drawer_calendar"/>
        <item
            android:id="@+id/nav_today"
            android:icon="@drawable/ic_today_black_24"
            android:title="@string/nav_drawer_today"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_week_black_24"
            android:title="@string/nav_drawer_7_days"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/nav_tasks_group">
            <item
                android:id="@+id/nav_tasks"
                android:icon="@drawable/ic_tasks_black_24"
                android:title="@string/nav_drawer_tasks"/>
            <item
                android:id="@+id/nav_routines"
                android:icon="@drawable/ic_routines_black_24"
                android:title="@string/nav_drawer_routines"/>
    </group>


    <item android:title="@string/nav_drawer_projects">
        <menu>
            <item
                android:id="@+id/nav_add_project"
                android:icon="@drawable/ic_add_black_24"
                android:title="@string/nav_add_project"/>
        </menu>
    </item>

</menu>
